		floating-point registers. Statistics are shown separately for both.

2010-10-26
	Version 2.4 Released

2010-10-27
	* processor.c, commit.c: bug fixed when computing structure occupancy stats
		in private structures. The macro updating threads' accumulated
		occupancy was called in commit_thread, which is a function that is
		not executed necessarily every cycle for every thread. Now, the
		structures occupancy is accumulated in function p_update_occupancy_stats.
		Since this can be costly for a high number of cores/threads, command
		line option '-occupancy_stats' has been added, which defaults to
		false.

2010-11-04
	* loader.c: warning removed for dynamic linking.
	* libm2skernel/machine.c: machine instruction 'cpuid' updated to dump in
		edx register a more accurate information about the modeled CPU.
	* libm2skernel/memory.c: function 'mem_page_get_next' and
		'mem_map_dump' added to reconstruct ranges of the current
		memory map.

2010-11-09
	* fs.c: new management of file handlers in structure fdt_t. Pipes are handled
		within.
	* pipe.c: file removed.

2010-11-12
	* m2skernel.c: centralized function to wake up suspended contexts.
	* m2skernel.c: blocking 'poll' system calls handled with an alternative mechanism
		using child threads (ke_process_suspended_thread).
	* m2skernel.c: pipes treated again as regular files. Thanks to the suspending
		mechanism using child threads, pipes don't need special treatment.

2010-11-18
	* fs.c: new file was missing from repository.
	* signal.c: signal handler fixed. In the old handler, only the signal number and
		the return address (pointing at the return code calling syscall 'sigreturn')
		were inserted into the stack. Now, following the Linux kernel implementation,
		a standard signal handler frame is constructed before launching a signal
		handler, and the return code is inserted into a specially allocated memory
		page with execution permission, in order to avoid executable stack.
